--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/toast": "^7.0.2",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -20,6 +22,7 @@
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.1",
     "sort-by": "^1.2.0",
+    "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
