--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/toast": "^7.0.2",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
@@ -20,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-router-dom": "^6.23.1",
+    "react-toastify": "^10.0.5",
     "sass": "^1.77.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.3.0",
