--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.4",
     "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -23,7 +27,8 @@
     "sass": "^1.77.1",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.3.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
